--- a/src/payinslip/html/index.html
+++ b/src/payinslip/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-<script src="js/cameraExample.js"></script>
+<script src="../js/cameraExample.js"></script>
 </head>
 <body>
 <!--
