lag by 10 seconds

--- a/src/replay/html/replay.html
+++ b/src/replay/html/replay.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="../css/simpleLiveTransformation.css">
-    <script src='../js/simpleLiveTransformation.js'></script>
+    <link rel="stylesheet" href="../css/replay.css">
+    <script src='../js/replay.js'></script>
 </head>
 <body>
-<h1>Simple Live Transformation</h1>
+<h1>Replay</h1>
 <div>
     <progress id="progressBar" max="100" value="10"></progress>
 </div>
 <div>
     <video id='video'></video>
     <canvas id='canvas'></canvas>
-    <button id='toggleFancy'>Toggle Fancy transformation</button>
+    <button id='toggleReplay'>Toggle lag by 10 seconds</button>
 </div>
 </body>
 </html>
