--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,11 @@
     <title>HTML 5 Camera, Audo and Video API</title>
 </head>
 <body>
-
-<a href="simpleLiveTransformation/html/simpleLiveTransformation.html">Simple Live Transformation</a>
+<div>
+    <a href="simpleLiveTransformation/html/simpleLiveTransformation.html">Simple Live Transformation</a>
+</div>
+<div>
+    <a href="replay/html/replay.html">Replay</a>
+</div>
 </body>
 </html>
