--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,8 @@
 <div>
     <a href="replay/html/replay.html">Replay</a>
 </div>
+<div>
+    <a href="qrreader/html/qrreader.html">QR Reader</a>
+</div>
 </body>
 </html>
