--- a/src/qrreader/html/qrreader.html
+++ b/src/qrreader/html/qrreader.html
@@ -15,6 +15,7 @@
     <progress id="progressBar" max="100" value="10"></progress>
 </div>
 <div id="reader"> </div>
+<div id="result"> Scanning... </div>
 <script src='../js/qrreader.js'></script>
 </body>
 </html>
