--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HTML 5 Camera, Audo and Video API</title>
+    <title>HTML 5 Camera API & NodeJS</title>
 </head>
 <body>
 <div>
-    <a href="simpleLiveTransformation/html/simpleLiveTransformation.html">Simple Live Transformation</a>
-</div>
-<div>
-    <a href="replay/html/replay.html">Replay</a>
-</div>
-<div>
-    <a href="qrreader/html/qrreader.html">QR Reader</a>
+    <div>
+        <input type="button" onclick="location.replace('websocketExample/html/websocketListener.html')" value="Go to remote controlled canvas"/>
+        <input type="button" onclick="location.replace('websocketExample/html/websocketSender.html')" value="Control canvas of web socket listener"/>
+        <input type="button" onclick="location.replace('sandbox.html')" value="Go to sandbox"/>
+    </div>
 </div>
 </body>
 </html>
