improved code quality

--- a/src/websocketExample/html/websocketListener.html
+++ b/src/websocketExample/html/websocketListener.html
@@ -11,10 +11,10 @@
 <body>
 <h1>HTML5 Camera & Video API - Listening on commands through Web Socket</h1>
 
-<div id="content"></div>
 <div>
     <progress id="progressBar" max="100" value="10"></progress>
 </div>
+<div id="errorContent"></div>
 <div>
     <video id='video'></video>
     <canvas id='canvas'></canvas>
